...
            android:textSize="35sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/about"
            android:padding="16dp"
            android:src="@drawable/ic_about_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <org.akvo.caddisfly.widget.WrapContentViewPager
...
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:onClick="onNextClicked"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/next"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

...
            android:layout_marginBottom="30dp"
            android:onClick="onOkClicked"
            android:paddingStart="26dp"
            android:paddingTop="20dp"
            android:paddingEnd="26dp"
            android:paddingBottom="20dp"
            android:text="@string/go_to_external_app"
            android:textSize="15dp"
            android:theme="?primaryButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpUsage" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDisableDiagnostics"
            style="@style/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
...
