<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="appName">"Akvo Caddisfly"</string>

    <string-array name="languages">
        <item>Bahasa Indonesia</item>
        <item>English</item>
        <item>Français</item>
        <item>Español</item>
    </string-array>

    <string-array name="language_codes">
        <item>in</item>
        <item>en</item>
        <item>fr</item>
        <item>es</item>
    </string-array>

    <string name="aquagenx_link">www.aquagenx.com</string>

    <string name="number_1">1.</string>
    <string name="number_2">2.</string>
    <string name="number_3">3.</string>
    <string name="number_4">4.</string>

    <!--Keys-->
    <string name="languageKey">language</string>
    <string name="systemLanguageKey">systemLanguage</string>
    <string name="diagnosticModeKey">diagnosticMode</string>
    <string name="showDebugMessagesKey">showDebugMessages</string>
    <string name="soundOnKey">soundOn</string>
    <string name="refreshKey">refresh</string>
    <string name="refreshAboutKey">refreshAbout</string>
    <string name="testModeOnKey">testModeOn</string>
    <string name="saveTestImageKey">SaveTestImage</string>

    <string name="ignoreTimeDelaysKey">ignoreTimeDelays</string>
    <string name="cameraMegaPixelsKey">cameraMegaPixels</string>
    <string name="showMinMegaPixelDialogKey">showMinMegaPixelDialog</string>
    <string name="simulateCrashKey">simulateCrash</string>

    <!--Diagnostic-->
    <string name="diagnostics">Diagnostics</string>
    <string name="debuggingOn">Show debug info</string>
    <string name="sound">Sound</string>
    <string name="ignoreTimeDelays">Ignore time delays</string>
    <string name="debugging">Debugging</string>
    <string name="testModeOn">Test Mode</string>
    <string name="save_test_image">Save test image</string>
    <string name="diagnostics_options">Diagnostic Options</string>
    <string name="disableDiagnostics">Close diagnostics mode</string>t

    <!--Diagnostic Mode: Messages -->
    <string name="diagnosticModeEnabled">Diagnostic mode enabled</string>
    <string name="diagnosticModeDisabled">Diagnostic mode disabled</string>

    <!--CBT-->
    <string name="mpn">MPN/100ml</string>

    <string name="delete_error">Error on file delete</string>
    <string name="test_list">Test List</string>

    <!--Software Notices-->
    <string name="lovibond_software"><a href="http://www.lovibond.com/">Lovibond Testing Instruction Visuals</a></string>
    <string name="apache_software"><a href="https://source.android.com/setup/licenses">AOSP</a>&#160;&#160;&#8226;&#160;&#160;<a href="https://github.com/joel-costigliola/assertj-core">AssertJ</a>&#160;&#160;&#8226;&#160;&#160;&#32;<a href="http://commons.apache.org/proper/commons-math/">Commons&#160;Math</a>&#160;&#160;&#8226;&#160;&#160;&#32;<a href="https://github.com/google/gson">Gson</a>&#160;&#160;&#8226;&#160;&#160;&#32;<a href="https://github.com/JakeWharton/timber">Timber</a>&#160;&#160;&#8226;&#160;&#160;<a href="https://github.com/zxing/zxing">ZXing</a>
    </string>
    <string name="mit_software"><a href="http://robolectric.org/">Robolectric</a>&#160;&#160;&#8226;&#160;&#160;<a href="https://github.com/felHR85/UsbSerial">UsbSerial</a>
    </string>
    <string name="cca_software"><a href="https://design.google.com/icons/">Material Icons</a></string>
    <string name="eclipse_software"><a href="https://github.com/junit-team/junit4">Junit 4</a></string>
    <string name="testing">Testing</string>
    <string name="simulateCrash">Simulate Crash</string>

</resources>