...
                <TextView
                    android:id="@+id/textLinkSoftwareNotices"
                    style="@style/LinkTextViewStyle"
                    android:onClick="onSoftwareNoticesClick"
                    android:paddingTop="18dp"
                    android:paddingBottom="12dp"
                    android:text="@string/legalInformation" />

                <TextView
                    android:id="@+id/textLinkTermsOfService"
                    style="@style/LinkTextViewStyle"
                    android:onClick="onTermsOfServicesClick"
                    android:paddingTop="12dp"
...
